[package]
name = "brick-break-battle"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.15.3", features = ["wayland"] }
bevy_rapier2d = { version = "0.29.0", features = ["simd-stable"] }
