[package]
name = "brick-break-battle"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.15.3" }
bevy_ggrs = { version = "0.17.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.11.0", features = ["ggrs"] }
bevy_rapier2d = { version = "0.29.0", features = ["simd-stable"] }

serde = { version = "1.0.219", features = ["derive"] }